# Cresliant

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  aa.csv  app.py  build.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: lint.yml
ImageController/: __init__.py  controller.py  tools.py  viewers.py
src/: editor.py  main.py
src/NodesCore/display/: __init__.py  image.py  result.py
src/NodesCore/features/: __init__.py  resize.py  rotate.py
src/coremodules/input/: __init__.py  image.py
src/coremodules/transform/: __init__.py  resize.py  rotate.py
src/corenodes/display/: __init__.py  image.py  input.py  output.py
src/corenodes/features/: __init__.py
src/corenodes/transform/: __init__.py  blur.py  brightness.py  contrast.py  crop.py  flip.py  flip_horizontally.py  gaussian_blur.py  opacity.py  resize.py  rotate.py  sharpness.py
src/plugins/example_plugin/: main.py  plugin.yaml
src/utils/: __init__.py  nodes.py  paths.py  view.py
src/utils/FileDialog/: __init__.py  fdialog.py
src/utils/ImageController/: controller.py  tools.py  viewers.py
tests/: test_main.py  test_nodes.py
