[tool.poetry]
name = "cresliant"
version = "0.1.0"
description = "A powerful node-based image editor made in Python."
authors = ["The Cresliant Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pillow = "^10.1.0"
dearpygui = "^1.10.1"
numpy = "^1.26.2"
pydantic = "^2.5.2"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = {extras = ["d"], version = "^23.7.0"}
flake8 = "^6.0.0"
pre-commit = "^3.3.2"
pyinstaller = "^6.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = 'black'
line_length = 120
